# mini-ICL

./: .gitignore  README.html  README.md  plot_latent_loss.py  pyproject.toml
docs/: CONDITIONAL_SAMPLING.md
notebooks/: Dyck.ipynb  LatentModel.ipynb  Linear.ipynb  coins.ipynb
results/: README_BROWSER.md  experiment_browser.html
scripts/: index_experiments.py  train_task_diversity.py
src/icl/: __init__.py
src/icl/coin/: coin.py  coin_config.py
src/icl/dyck/: dyck.py  dyck_config.py  dyck_task_vec.py  dyck_utils.py
src/icl/figures/: head_view.js  head_view.py  plot.py  task_vec_viz.py
src/icl/latent_markov/: __init__.py  latent_config.py  latent_utils.py  markov.py  markov_latent.py  random_distributions.py
src/icl/linear/: __init__.py  linear_attn.py  linear_notebook_helpers.py  linear_path_utils.py  linear_utils.py  lr_config.py  lr_eval.py  lr_models.py  lr_optimize.py  lr_task.py  lr_transformer.py  lr_utils.py  sampling.py  sufficient_stats.py  task_vecs.py  train_linear.py
src/icl/models/: __init__.py  attention.py  base_models.py  kv_cache.py  legacy.py  ngram_latent.py  pos_encoder.py
src/icl/utils/: __init__.py  attn_plots_beta.py  basic.py  experiment_analysis.py  experiment_index.py  kv_latent_task_vec.py  kv_latent_task_vec_beta.py  latent_ood_analysis.py  latent_task_vec.py  linear_algebra_utils.py  linear_ood_analysis.py  linear_processor.py  linear_visualization_utils.py  markov_conditional_sampler.py  notebook_utils.py  processor_utils.py  simple_markov_sampler.py  task_vec.py  train.py  (+2 more)
tests/: test_kv_latent_task_vec.py
(+1 files in other folders)
