[project]
name = "icl"
version = "0.1.0"
description = "Investigate emergence of ICL capabilities through Markovian tasks and task vectors."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "absl-py>=2.3.1",
    "anywidget>=0.9.18",
    "cvxpy>=1.7.1",
    "imageio>=2.33.0",
    "ipython>=8.37.0",
    "jupyter>=1.1.1",
    "kaleido>=1.0.0",
    "matplotlib>=3.10.3",
    "ml-collections>=1.1.0",
    "numpy>=2.2.6",
    "nvtx>=0.2.12",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "pygam>=0.10.1",
    "regex>=2024.11.6",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "torchinfo>=1.8.0",
    "tqdm>=4.67.1",
    "wandb>=0.21.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatchling.build.targets.wheel]
packages = ["src/icl"]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "isort>=6.0.1",
    "mypy>=1.17.0",
    "pre-commit>=4.2.0",
    "pytest>=8.4.1",
]
